# windowproject

./: .gitignore  Cargo.toml  README.md  build.rs  log4rs.yml  presenting
src/: asset_management.rs  camera.rs  gui.rs  macros.rs  main.rs  shader.rs  shader.rs.old  texture.rs  util.rs
src/asset_management/: cube.rs  mesh.rs  model.rs  object.rs
src/assets/models/xenonShapes/: gshapes_octohedron.002.mtl  gshapes_rhombicuboctahedron.blend  gshapes_truncated-hexahedron.blend  icosa.002.mtl  wplatonic_tetrahedron.mtl
src/assets/shaders/: basic_lighting.frag  basic_lighting.vert  model_loading.frag  model_loading.vert  test.frag  test.vert
src/gui/: font.rs
src/gui/font/: ttf.rs
src/shader/: buffer.rs  light.rs  material.rs  vertexattrib.rs
src/util/: glmaddon.rs
