[package]
name = "windowproject"
version = "0.1.0"
edition = "2024"

[dependencies]
gl = "0.14.0"
glfw = "0.59.0"
lazy_static = "1.5.0"
log = "0.4.27"
log4rs = "1.3.0"
nalgebra-glm = "0.19.0"
stb_image = "0.3.0"
russimp = { version = "3.2.0", features = ["prebuilt"] }
russimp-sys = "2.0.2"
imgui-rs = "1.47.0"
